<resources>
	<string name="app_name">D&amp;D Assistant</string>

  <!-- Name panel -->
  <string name="character_name" formatted="false">%s</string>
  <string name="level_xp" formatted="false"><b>Level %d</b>, <i>%d XP</i></string>
  <string name="story">&#x1f4d6;</string>

  <!-- health panel. -->
  <string name="healthbarlabel" formatted="false">%d/%d</string>
  <string name="longrest"><b>zzZ</b></string>
  <string name="deathfail">/</string>
  <string name="deathsuccess">X</string>

  <!-- combat panel -->
	<string name="speed" formatted="false">%d ft</string>
	<string name="armorclass" formatted="false">%d</string>

  <!-- panel preview label formatter -->
  <string name="panel_label_format" formatted="false"><b>%s</b> <p><i>(%s)</i></p></string>

  <string name="cast" formatted="false">&#128165;</string>
  <string name="game_die">&#x1F3B2;</string>
  <string name="heavy_plus">&#x2795;</string>
  <string name="heavy_minus">&#x2796;</string>

  <string name="dialog_rolling_term_header_insert">Insert a term to roll</string>
  <string name="dialog_rolling_term_header_history">History of rolled results</string>
  <string name="dialog_rolling_term_header_preset">Roll a preset rolling term</string>
  <string name="insert_term_example">2d4 - d2 + 2</string>
  <string name="insert_term_roll">@string/game_die</string>
  <string name="insert_term_add">@string/heavy_plus</string>

  <string name="title_skills">Skills &amp; Proficiencies</string>
  <string name="section_skills">Skills</string>
  <string name="section_proficiencies">Proficiencies</string>

  <string name="title_attacks">Attacks</string>
  <string name="title_spells">Spells &amp; Magic</string>
  <string name="title_classes">Classes</string>
  <string name="title_inventory">Inventory</string>
  <string name="title_race_background">My History</string>
  <string name="title_rolls">Rolls &amp; Counters</string>

  <string name="dialog_story_title">The Hero\'s Story &amp; Notes</string>
  <string name="dialog_story_add">Add new Story Bits.</string>
  <string name="dialog_story_add_submit">Add</string>

  <string name="attack_dmg">Damage dealt by this attack.</string>

  <string name="section_dice">Dice</string>
  <string name="section_counters">Resources</string>
  <string name="section_rolls">History of Rolls</string>
</resources>
