<LinearLayout
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android"
  >
  <TextView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/title_rolls"
    android:textSize="20sp"
    />

  <!-- Custom dice to roll. (also listed in history) -->
  <TextView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/section_dice"
    />
  <include
    android:id="@+id/grid_dice"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/vmargin"
    android:layout_width="match_parent"
    layout="@layout/grid_dice"
    />

  <LinearLayout
    android:background="@drawable/framed"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <TextView
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:text="@string/section_counters"
      />
    <ListView
      android:id="@+id/list_counters"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      />
  </LinearLayout>
  <LinearLayout
    android:background="@drawable/framed"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <TextView
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:text="@string/section_rolls"
      />
    <ListView
      android:id="@+id/list_rolls"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      />
      <!-- list_item_roll.xml -->
  </LinearLayout>
</LinearLayout>
