<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:keepScreenOn="true"
    android:paddingHorizontal="@dimen/hmargin"
  >
  <LinearLayout
    android:gravity="top"
    android:id="@+id/main_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <!-- NAME, XP (CHARACTER LEVEL), INSPIRATION. -->

    <LinearLayout
      android:background="@drawable/framed"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      >
      <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0sp"
        android:orientation="vertical"
        android:layout_weight="9"
        >
        <TextView
          android:id="@+id/character_name"
          android:layout_height="wrap_content"
          android:layout_marginVertical="@dimen/vmargin"
          android:layout_width="match_parent"
          android:text="@string/character_name"
          android:textColor="#000000"
          android:textSize="@dimen/textSizeTitle"
          android:textStyle="bold"
          />
        <TextView
          android:id="@+id/experience"
          android:layout_height="wrap_content"
          android:layout_marginVertical="0sp"
          android:layout_width="match_parent"
          android:text="@string/level_xp"
          android:textSize="@dimen/textSizeSmall"
          />
      </LinearLayout>

      <!-- EXTRA DICE AND HISTORY. -->
      <TextView style="@style/PlainButton"
        android:id="@+id/dialog_dice_open"
        android:onClick="onClick"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginVertical="@dimen/vmargin"
        android:layout_weight="1"
        android:layout_width="0sp"
        android:maxLines="1"
        android:text="@string/game_die"
        />

      <!-- CAMPAIGN AND CHARACTER NOTES. -->
      <TextView style="@style/PlainButton"
        android:id="@+id/view_story"
        android:onClick="onClick"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginVertical="@dimen/vmargin"
        android:layout_weight="1"
        android:layout_width="0sp"
        android:maxLines="1"
        android:text="@string/story"
        />
    </LinearLayout>

    <!-- HEALTH BAR WITH UNDERLYING DEATH STATS AND RESTING OPTIONS. -->

    <!-- layout
     [damage] [Bar*] [heal]
     Bar* = unfoldable: with insert field, and more buttons.
    -->

    <LinearLayout
      android:background="@drawable/framed"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/vmargin"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:padding="@dimen/vmargin"
      >
      <Button style="@style/PlainButton"
        android:id="@+id/take_damage"
        android:layout_height="match_parent"
        android:layout_weight=".1"
        android:layout_width="0sp"
        android:text="-"
        android:textStyle="bold"
        android:textSize="@dimen/textSizeHuge"
        android:textColor="@color/colorBad"
        android:tooltipText="Take Damage!"
        />
      <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight=".8"
        android:layout_width="0sp"
        android:orientation="vertical"
        >
        <!--
        On Click, open long rest, short rest and death fight.
        -->
        <RelativeLayout
           android:layout_height="50dp"
           android:layout_width="match_parent"
          >
          <ProgressBar
            android:background="#00000000"
            android:gravity="center"
            android:id="@+id/healthbar_new"
            android:indeterminate="false"
            android:progress="25"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:progressDrawable="@drawable/healthbar"
            android:tooltipText="Health Bar. Open to show more options, like rest or death saves."
            style="@android:style/Widget.ProgressBar.Horizontal"
            />
          <TextView
            android:id="@+id/hp_stats"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:text="?/??"
            android:gravity="center"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            />
        </RelativeLayout>
        <LinearLayout
          android:id="@+id/more_health_panel"
          android:layout_height="match_parent"
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:visibility="gone"
          >
          <EditText
            android:id="@+id/hp_custom_modify"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vmargin"
            android:layout_width="match_parent"
            android:text="+2d10 + 20"
            android:tooltipText="Custom Hit or heal (-/+ N)"
            />
          <LinearLayout
            android:background="@drawable/framed"
            android:id="@+id/timers"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vmargin"
            android:layout_width="match_parent"
            android:padding="6sp"
            >
            <TextView
              android:background="@drawable/framed"
              android:gravity="center"
              android:id="@+id/tick"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:layout_width="0sp"
              />
            <TextView
              android:background="@drawable/framed"
              android:gravity="center"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:layout_width="0sp"
              android:text="Short Rest"
              />
            <TextView
              android:background="@drawable/framed"
              android:gravity="center"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:layout_width="0sp"
              android:text="Long Rest"
              />
            <TextView
              android:background="@drawable/framed"
              android:gravity="center"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:layout_width="0sp"
              android:text="One Day"
              />
            </LinearLayout>
          <LinearLayout
            android:background="@drawable/framed"
            android:id="@+id/deathfight"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vmargin"
            android:layout_width="match_parent"
            android:padding="6sp"
            >
            <TextView style="@style/PlainButton"
              android:gravity="center"
              android:id="@+id/deathsave_overview"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:layout_width="0sp"
              android:tooltipText="Death Save Overview. Click to reset."
              />
            <TextView style="@style/PlainButton"
              android:gravity="center"
              android:id="@+id/deathsave_fail"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:layout_width="0sp"
              android:text="&lt;11"
              android:tooltipText="Death Save Failed!"
              />
            <TextView style="@style/PlainButton"
              android:gravity="center"
              android:id="@+id/deathsave_success"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:layout_width="0sp"
              android:text="\u2265 11"
              android:tooltipText="Death Save Success!"
              />
            <TextView style="@style/PlainButton"
              android:gravity="center"
              android:id="@+id/deathsave_roll"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:layout_width="0sp"
              android:text="Roll"
              android:tooltipText="Roll and Auto-Enter the Result"
              />
          </LinearLayout>
        </LinearLayout>
      </LinearLayout>
      <Button style="@style/PlainButton"
        android:gravity="center"
        android:id="@+id/heal"
        android:layout_height="match_parent"
        android:layout_weight=".1"
        android:layout_width="0sp"
        android:text="+"
        android:textStyle="bold"
        android:textSize="@dimen/textSizeHuge"
        android:textColor="@color/colorGood"
        android:tooltipText="Heal!"
        />
    </LinearLayout>

    <!-- BASIC STATS: HP, AC, SPEED -->

    <LinearLayout
      android:background="@drawable/framed"
      android:id="@+id/hp_ac_speed"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/vmargin"
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/hmargin"
      android:tooltipText="Tap here to change max / tmp hitpoints, hitdice, armor class and speeds."
      >
      <TextView
        android:id="@+id/ac_stats"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__AC__: 12 (naked)"
        />
      <TextView
        android:id="@+id/speed_stats"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Speed__: 35ft (30ft flying)"
        />
    </LinearLayout>


    <!-- ABILITY SCORES.
      Background colour indicates prof in ability saving throws.
      onClick: roll value
      onLongClick: roll saving throw -->
    <include
      android:id="@+id/abilities_grid"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/vmargin"
      android:layout_width="match_parent"
      layout="@layout/abilities"
      />

    <!-- PROFICIENCY AND SKILLS. -->

    <LinearLayout
      android:background="@drawable/framed"
      android:id="@+id/profificiency_language_skills"
      android:onClick="onClick"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/vmargin"
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/hmargin"
      android:tooltipText="Show all skills and Traits. Tap here!"
      >
      <!-- PROFICIENCY BONUS.
      Open, to see a overview, which skills have profificiency.  -->
      <TextView
        android:id="@+id/profificiency"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Proficiency Bonus__: +0"
        />
      <TextView
        android:id="@+id/language"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Languages__: Common, ..."
        />
      <TextView
        android:id="@+id/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Tools__: -"
        />
      <TextView
        android:id="@+id/passive_perception"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Passive Perception__: Perception + 10"
        />
      <TextView
        android:id="@+id/skills_proficient"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Skills__: Persuation, Animal Handling, ..."
        />
      <TextView
        android:id="@+id/traits"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="__Traits__: Keen Nose. Flury of Fluffy, Immunity Stuff."
        />
    </LinearLayout>

    <!-- ACTIONS, ATTACKS, SPELLS, INVENTORY. -->

    <LinearLayout
      android:background="@drawable/framed"
      android:id="@+id/actions_panel"
      android:layout_height="wrap_content"
      android:layout_marginVertical="@dimen/vmargin"
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/hmargin"
      android:tooltipText="Show actions. Tap here."
      >
      <LinearLayout
        android:id="@+id/action_option_buttons"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <Button style="@style/PlainButton"
          android:id="@+id/action_special"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:onClick="onClick"
          android:text="Special"
          android:textStyle="bold"
          />
        <Button
          style="@style/PlainButton"
          android:id="@+id/action_attack"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:onClick="onClick"
          android:text="Attack"
          android:textStyle="bold"
          />
        <Button
          style="@style/PlainButton"
          android:id="@+id/action_spells"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:onClick="onClick"
          android:text="Spells"
          android:textStyle="bold"
          />
        <Button style="@style/PlainButton"
          android:id="@+id/action_inventory"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:onClick="onClick"
          android:text="Inventory"
          android:textStyle="bold"
          />
      </LinearLayout>

      <!-- COUNTERS AND RESOURCES AS OVERVIEW. -->

      <LinearLayout
        android:background="@drawable/framed"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/vmargin"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
        <TextView
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:text="@string/section_counters"
          android:textStyle="bold"
          />
        <GridView
          android:id="@+id/grid_counters"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:numColumns="5"
          />
      </LinearLayout>
    </LinearLayout>

  <!-- end of main layout -->
  </LinearLayout>
</ScrollView>
